Cart UI and Conditional rendering When cartItems are there then only visibility.

--- a/ProductManagement_Frontend/src/App.css
+++ b/ProductManagement_Frontend/src/App.css
@@ -10,7 +10,10 @@
 .hero{
   min-height: 50vh;
 }
-
+/* Product card styles */
+.product-card{
+  height: 250px;
+}
 
 /* AddProductForm styles */
 
